# RoofSense

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  LICENSE-MIT  README.md  config.env  config.ini  config.py  main.py  pyproject.toml  requirements.txt  runners.py  stack.py  tboard.ipynb
annotation/: exporters.py  importers.py  to_png.ipynb  to_tif.ipynb
augmentations/: feature.py  geometric.py  index.py  intensity.py
classification/: augmentations.py  datamodules.py  dataset.py  datasets.py  inference.ipynb  landcover.ipynb  landuse_cnn_part_1.ipynb  roofsense.ipynb  sample.ipynb  splits.py  task.py  tbench.ipynb  test.ipynb  test.py  train.ipynb  train.py
common/: __init__.py  augmentations.py  merger.py  sampler.py  splits.py
common/downloaders/: __init__.py  asset.py  bag3d.py
common/parsers/: __init__.py  bag3d.py  base.py  image.py  lidar.py
data/certs/: _.fundaments.nl.crt
data/iris/: base.json
dev/: landuse_cnn_part_3.ipynb
download/: __init__.py  index.py  ortho.py
downloaders/: __init__.py  _base.py  ahn34.py  asset.py  bag3d.py  base.py  image.py  index.py  lidar.py  ortho.py
enums/: band.py
feature/: utils.py
feature/parsers/: RGB_37EN1_clip.tif.aux.xml  RGB_37EN2_clip.tif.aux.xml  lidar.ipynb  ortho.ipynb  preprocessing.md  preprocessing.qgz  raster.py  test_mp.py
implementation/annotation/: import.py  importers.py
implementation/inference/: obia.py  tile.py  tiled.py
implementation/train/: baseline.py  baseline_manual_experimentation.py  baseline_random_search_1.py  baseline_random_search_2.py  baseline_random_search_3.py  baseline_random_search_validation.py  config.py  data.py  optimization_random_search_round_1.db  optimization_random_search_round_2.db  optimization_random_search_round_2_clean.db  optimization_random_search_round_3_tpe.db  pre.py  test.py
implementation/training/: ablation.py  baseline.py  basic.py  experimentation.py  hptuning.py  optim.py  optimization.py  prelim.py  temp.ipynb  test.ipynb  utilities.py  utils.py
inference/: __init__.py  augmentations.py  datamodule.py  datamodules.py  dataset.py  datasets.py  engine.py  inference.ipynb  obia.py  patch.ipynb  splitter.py  task.py  train.ipynb  train.py
inference/chip/: chip.ipynb
inference/tile/: dataset.py  engine.py
internal/: tboard.ipynb
metrics/classification/: confusion_matrix.py
metrics/utilities/: plot.py
parsers/: .gitignore  README.md  __init__.py  _base.py  bag3d.py  base.py  contour.py  geom.py  image.py  lidar.py  main.py  ortho.py  point_cloud.py  raster.py  requirements.txt  test.py  utils.py
parsers/utils/: pcloud.py  raster.py
preprocessing/: __init__.py  merger.py  sampler.py  splitter.py
preprocessing/downloaders/: __init__.py  _base.py  asset.py  bag3d.py  base.py
preprocessing/parsers/: __init__.py  bag3d.py  base.py  image.py  lidar.py
preprocessors/: __init__.py
pretraining/: potsdam.py  utils_i_cant_name_this_utils_or_else_i_get_an_import_error.py
pretraining/supervised/: potsdam.py  splitter.ipynb
pretraining/unsupervised/: dataset.py  moco.ipynb  moco.py
requirements/: common.txt  dev.txt  train.txt
roofsense/: bag3d.py  config.env  config.py  main.py  runners.py  sampler.py  split.py  splitter.py  stack.py
roofsense/annotation/: exporters.py  importers.py
roofsense/augmentations/: color.py  feature.py  index.py  scale.py
roofsense/data/: cities.gpkg
roofsense/downloaders/: asset.py  bag3d.py
roofsense/enums/: stage.py
roofsense/inference/: obia.py  tile.py  tiled.py
roofsense/parsers/: __init__.py  bag3d.py  base.py  image.py  lidar.py
roofsense/preprocessing/: chip_samplers.py  stack.py  tile_splitters.py
roofsense/training/: datamodule.py  dataset.py  (+4 more)
scripts/: seeds.py
testbench/: dataset.py  datasets.py  depr.ipynb  dmodule.py  landuse_cnn_part_2.ipynb  main.ipynb  main.py  semantic_segmentation.ipynb
tools/: index.ipynb  index.py  sampler.ipynb
training/: __init__.py  datamodule.py  dataset.py  engine.ipynb  engine.py  lod_guide.ipynb  loss.py  model.py  postannot.ipynb  sampler.py  scheduler.py  segguide.ipynb  splitter.py  task.py  train.ipynb  train.py  wrappers.py
utils/: __init__.py  cjio.py  color.py  eleos.py  file.py  geom.py  iris.py  math.py  model.py  pcloud.ipynb  pcloud.py  postprocess_masks.ipynb  raster.py  robo.ipynb  type.py
(+99 files in other folders)
